# BERT_NLP-Text-Classification-Final-Proyect-

./: .gitignore  BERT_Model.ipynb  README.md  main.py  predict.py  preprocess_text.ipynb  pyproject.toml
Experiment_Tracking/BERT_mlflow/: BERT_mlflow.ipynb  classification_report.json  experiment_config.json
Experiment_Tracking/BERT_mlflow_testing/: BERT_mlflow_testing.ipynb  classification_report.json  experiment_config.json
Experiment_Tracking/BERT_optuna_mlflow_optimization/: BERT_optuna_mlflow.ipynb
preprocessing/: functions.py
