[project]
name = "bert-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "huggingface-hub[hf-xet]>=0.36.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "markupsafe==2.1.3",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "optuna-integration[mlflow]>=4.5.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy==3.7.4",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
